# QTExercise

./: CMakeLists.txt  README.md
Algorithm/: CMakeLists.txt  beads.cpp  bfs.cpp  dualpal.cpp  findLongestChain.cpp  friday.cpp  frog.cpp  gift1.cpp  lengthOfLIS.cpp  main.cpp  milk.cpp  milk2.cpp  namenum.cpp  palsquare.cpp  ride.cpp  transformation.cpp
ColorWidgetCopy/: CMakeLists.txt  colorwidgetcopy.cpp  colorwidgetcopy.h  colorwidgetcopy.pro  frmcolorwidgetcopy.cpp  frmcolorwidgetcopy.h  frmcolorwidgetcopy.ui  main.cpp  ui_frmcolorwidgetcopy.h
framelesswidgetcopy/: CMakeLists.txt  framelesswidgetcopy.cpp  framelesswidgetcopy.h  framelesswidgetcopy.ui  framelesswidgetcopy2.cpp  framelesswidgetcopy2.h  frmframelesswidgetcopy.cpp  frmframelesswidgetcopy.h  frmframelesswidgetcopy.ui  main.cpp  ui_frmframelesswidgetcopy.h
